adding mobile side

--- a/static/assets/css/buyer/mobile.css
+++ b/static/assets/css/buyer/mobile.css
@@ -1,9 +1,9 @@
-@media only screen and (orientation:landscape) {
+/* @media only screen and (orientation:landscape) {
     body {
         height: 100vw;
         transform: rotate(90deg);
     }
-}
+} */
 
 body {
     /* font-family: 'Commissioner', sans-serif; */
