--- a/static/assets/css/buyer/tablet_new.css
+++ b/static/assets/css/buyer/tablet_new.css
@@ -23,6 +23,7 @@ fieldset {
 }
 
 .div-progress {
+    top: 5%;
     position: absolute;
     width: 100%;
 }
@@ -51,6 +52,7 @@ fieldset {
 }
 
 .logo {
+    margin-top: 5%;
     position: absolute;
     width: 70px;
     height: 28px;
@@ -216,7 +218,7 @@ fieldset {
     height: 55%;
     right: 0;
     bottom: 0;
-    position: absolute;
+    position: fixed;
     /* background-color: rebeccapurple; */
     background: linear-gradient(243.62deg, #D8E0F0 0%, rgba(241, 245, 252, 0.0001) 78.63%);
     mix-blend-mode: normal;
@@ -259,11 +261,11 @@ fieldset {
 
 .footer {  
     /* float: right; */
-    position: absolute;
+    position: fixed;
     height: auto;
     background: linear-gradient(225deg, #2B2E38 0%, #1A1D24 100%);
     border-radius: 60px 0px 0px 0px;
-    /* bottom: 0; */
+    bottom: 0;
     width: calc(100% - 5rem);
     right: 0;
 }
@@ -657,3 +659,57 @@ input, textarea, select {
     background-color: #00ffff00 !important;
     box-shadow: none !important;
 }
+/* asd */
+@media (max-width: 575.98px) { 
+
+ }
+
+/* Small devices (landscape phones, less than 768px) */
+@media (max-width: 767.98px) { 
+
+}
+
+/* Medium devices (tablets, less than 992px) */
+@media (max-width: 991.98px) { 
+    .survey-intro {
+        margin-top: calc(33%);
+    }
+
+    .survey-intro-title {
+        width: 70% !important;
+    }
+
+    .container-card-gift {
+        top: 35% !important;
+    }
+}
+
+/* Large devices (desktops, less than 1200px) */
+@media (max-width: 1199.98px) { 
+
+}
+
+/* X-Large devices (large desktops, less than 1400px) */
+@media (max-width: 1399.98px) { 
+
+}
+
+
+/* @media screen and (min-width: 1200px) {
+    .survey-intro {
+        margin-top: calc(39%) !important;
+    }
+
+    .container-main-form {
+        left: 45% !important;
+        width: 50% !important;
+    }
+
+    .card-gift {
+        width: 400px !important;
+    }
+
+    .left-poly {
+        margin-top: 200px !important;
+    }
+} */
