--- a/static/assets/css/buyer/tablet_new.css
+++ b/static/assets/css/buyer/tablet_new.css
@@ -659,57 +659,177 @@ input, textarea, select {
     background-color: #00ffff00 !important;
     box-shadow: none !important;
 }
-/* asd */
-@media (max-width: 575.98px) { 
 
- }
 
-/* Small devices (landscape phones, less than 768px) */
-@media (max-width: 767.98px) { 
-
+@media (max-width: 575.98px) {
+    #progressbar li span {
+        margin-left: -30% !important;
+    }
 }
 
-/* Medium devices (tablets, less than 992px) */
+/* asd */
+@media (max-width: 767.98px) {
+    #progressbar li span {
+        margin-left: -50% !important;
+    }
+}
+
+/* asd */
 @media (max-width: 991.98px) { 
-    .survey-intro {
-        margin-top: calc(33%);
+    .container-main-form {
+        left: 0%;
+        margin: auto;
+        margin-top: 75px;
+        width: 100%;
+        /* margin-bottom: 475px; */
+    }
+
+    .container-survey {
+        margin-left: auto !important;
+        margin-right: auto !important;
+    }
+
+    .left-poly, .top-poly, .bottom-poly {
+        background: #FFFFFF00 !important;
+    }
+
+    .container-intro {
+        margin-bottom: 300px;
+    }
+
+    .footer {
+        width: 100%;
+        border-radius: 0px;
+    }
+
+    .center .col-3, .center .col-5 {
+        width: 50% !important;
+        max-width: 25% !important;
+        padding: 0 !important;
+        margin-right: 0 !important;
+        margin-top: auto !important;
+        margin-bottom: auto !important;
+        margin-left: 10px !important;
+    }
+
+    .center .col-3 {
+        text-align: left!important;
+    }
+
+    .center .col-4 {
+        display: none;
+    }
+
+    .div-progress .col-lg-8 {
+        display: none;
+    }
+
+    .div-progress .col-6 {
+        -ms-flex: 0 0 100%;
+        flex: 0 0 100%;
+        max-width: 100%;
+        margin-top: 40px !important;
     }
 
     .survey-intro-title {
-        width: 70% !important;
+        margin-top: 190px !important;
     }
 
     .container-card-gift {
-        top: 35% !important;
-    }
-}
-
-/* Large devices (desktops, less than 1200px) */
-@media (max-width: 1199.98px) { 
-
-}
-
-/* X-Large devices (large desktops, less than 1400px) */
-@media (max-width: 1399.98px) { 
-
-}
-
-
-/* @media screen and (min-width: 1200px) {
-    .survey-intro {
-        margin-top: calc(39%) !important;
-    }
-
-    .container-main-form {
-        left: 45% !important;
-        width: 50% !important;
+        position: relative !important;
+        margin-top: 60px !important;
+        top: 0%;
+        left: 0%;
+        margin-bottom: 110px !important;
     }
 
     .card-gift {
-        width: 400px !important;
+        max-width: 720px;
     }
 
-    .left-poly {
-        margin-top: 200px !important;
+    .card-amz {
+        margin: auto !important;
     }
-} */
+
+    .container-address {
+        margin: auto;
+    }
+
+    #progressbar li span {
+        margin-left: -70% !important;
+    }
+ }
+
+/* Large devices (desktops, less than 1200px) */
+@media (min-width: 992px) { 
+    .survey-intro {
+        margin-top: 180px !important;
+    }
+
+    .top-poly {
+        height: 277px !important;
+    }
+
+    .container-card-gift {
+        top: 225px !important;
+    }
+
+    #progressbar li span {
+        margin-left: 0px !important;
+    }
+
+    .div-terms label {
+        padding-left: 0rem!important;
+        font-size: 14px !important;
+    }
+}
+
+/* X-Large devices (large desktops, less than 1400px) */
+@media (min-width: 1200px) { 
+    .survey-intro {
+        margin-top: 185px !important;
+    }
+    .top-poly {
+        height: 277px !important;
+    }
+
+    .container-card-gift {
+        top: 240px !important;
+    }
+
+    #progressbar li span {
+        margin-left: -20px !important;
+    }
+
+    .div-terms label {
+        padding-left: 1rem!important;
+        font-size: 15px !important;
+    }
+}
+
+
+@media screen and (min-width: 1400px) {
+    .container-main-form {
+        left: 250px;
+        width: 350px;
+    }
+
+    #progressbar li span {
+        margin-left: -40px !important;
+    }
+
+    .survey-intro-title {
+        width: 600px !important;
+    }
+}
+
+
+@media screen and (min-width: 1600px) {
+    .container-main-form {
+        left: 350px;
+    }
+
+    #progressbar li span {
+        margin-left: -80px !important;
+    }
+}
